--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <div class="header-logo">
                     <a href=""><img src="img/logo.png" width="117" height="37" alt="Logo"></a>
                 </div>
-                <div class="header-navigation">
+                <nav class="header-navigation">
                     <ul class="header-list">
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
@@ -20,7 +20,7 @@
                         <li><a href="">BLOG</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
-                </div>
+                </nav>
             </div>
             <div class="header-welcome">
                 <div class="header-content">
@@ -232,14 +232,16 @@
         </div>
     </main>
     <footer>
-        <nav class="f-list">
-            <a href="">Facebook</a>
-            <a href="">Twitter</a>
-            <a href="">Google+</a>
-            <a href="">LinkedIn</a>
-            <a href="">Behance</a>
-            <a href="">Dribbble</a>
-            <a href="">GitHub</a>
+        <nav class="f-navigation">
+            <ul class="f-list">
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Twitter</a></li>
+                <li><a href="">Google+</a></li>
+                <li><a href="">LinkedIn</a></li>
+                <li><a href="">Behance</a></li>
+                <li><a href="">Dribbble</a></li>
+                <li><a href="">GitHub</a></li>
+            </ul>
         </nav>
     </footer>
 </body>
