--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
                         </nav>
                         <div class="tabs_body">
                             <div id="tab_01" class="tabs_block">
-                                <img src="img/Mac1.png" width="541" height="364" alt="Works_icon">
-                                <img src="img/Mac2.png" width="541" height="361" alt="Works_icon">
-                                <img src="img/Mac3.png" width="541" height="363" alt="Works_icon">
-                                <img src="img/Mac4.png" width="541" height="362" alt="Works_icon">
+                                <img src="img/Mac1.png" alt="Works_icon">
+                                <img src="img/Mac2.png" alt="Works_icon">
+                                <img src="img/Mac3.png" alt="Works_icon">
+                                <img src="img/Mac4.png" alt="Works_icon">
                             </div>
 
                         </div>
@@ -188,7 +188,9 @@
                 <p class="second">Our clients love us!</p>
                 <article class="us-list">
                     <div class="us-item">
-                        <img src="img/Base-Us.png" alt="Image">
+                        <div class="img">
+                            <img src="img/Base-Us.png" alt="Image">
+                        </div>
                         <div class="comment">
                             <p class="text">“Nullam dapibus blandit orci, viverra <br>gravida dui lobortis eget. Maecenas <br>fringilla urna eu nisl scelerisque.”</p>
                             <p class="name">CHANEL IMAN</p>
@@ -196,7 +198,9 @@
                         </div>
                     </div>
                     <div class="us-item">
-                        <img src="img/Base-Us.png" alt="Image">
+                        <div class="img">
+                            <img src="img/Base-Us.png" alt="Image">
+                        </div>
                         <div class="comment">
                             <p class="text">“Vivamus luctus urna sed urna ultricies<br>ac tempor dui sagittis. In condimentum<br>facilisis porta.”</p>
                             <p class="name">ADRIANA LIMA</p>
@@ -204,7 +208,9 @@
                         </div>
                     </div>
                     <div class="us-item">
-                        <img src="img/Base-Us.png" alt="Image">
+                        <div class="img">
+                            <img src="img/Base-Us.png" alt="Image">
+                        </div>
                         <div class="comment">
                             <p class="text">“Vivamus luctus urna sed urna ultricies <br>ac tempor dui sagittis. In condimentum<br>facilisis porta.”  </p>
                             <p class="name">ANNE HATHAWAY</p>
@@ -212,7 +218,9 @@
                         </div>
                     </div>
                     <div class="us-item">
-                        <img src="img/Base-Us.png" alt="Image">
+                        <div class="img">
+                            <img src="img/Base-Us.png" alt="Image">
+                        </div>
                         <div class="comment">
                             <p class="text">“Phasellus non purus vel arcu tempor <br>commodo. Fusce semper, purus vel luctus<br>molestie, risus sem cursus neque.”  </p>
                             <p class="name">EMMA STONE</p>
@@ -225,8 +233,10 @@
                 <p class="first">GET IN TOUCH</p>
                 <p class="second">1600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111 </p>
                 <article class="form">
-                    <input class="name_ms" type="text" placeholder="Your Name *" >
-                    <input class="email_ms" type="email" placeholder="Your Email *">
+                    <div class="form-ne">
+                        <input class="name_ms" type="text" placeholder="Your Name *" >
+                        <input class="email_ms" type="email" placeholder="Your Email *">
+                    </div>
                     <textarea class="text-ar" name="text" id="" cols="30" rows="10" placeholder="Your Message *"></textarea>
                 </article>
                 <div class="Message-button">
